# handle_manager

./: .clang-format  .clang-tidy  .cspell.json  .gitignore  CMakeLists.txt  generate_db.cpp  handle_manager_example.cpp  handle_manager_sqlite.cpp  handle_manager_sqlite.h  order.cpp  order.h  orm_test.cpp  read_db.cpp  read_db2.cpp  user.cpp  user.h
dbs_handle_manager/: CMakeLists.txt  inner_defines.h  path_manager.cpp  path_manager.h  storage_container.cpp  storage_container.h  storage_factory.cpp  storage_factory.h
dbs_handle_manager/include/dbs/: dbs.h
dbs_handle_manager/include/dbs/service/: a_service.h
dbs_handle_manager/service/: a_service.cpp  a_service_test.cpp
dbs_handle_manager/storage/: a_storage.cpp  a_storage.h
doc/: design.plantuml
nds_sqlite/: CMakeLists.txt  nds_compress.c  nds_extensions.h  nds_sqlite3.h  nds_sqlite3ext.h  okapi_bm25.cpp  okapi_bm25.h  packerNDSC.c  sqlite3.h
